2018-06-19  Wenson Hsieh  <wenson_hsieh@apple.com>

        [WebKit on watchOS] Vend username text content type when using scribble in login fields
        https://bugs.webkit.org/show_bug.cgi?id=186791
        <rdar://problem/41226935>

        Reviewed by Beth Dakin.

        Add testing support for grabbing the current text content type of the focused element.

        * DumpRenderTree/ios/UIScriptControllerIOS.mm:
        (WTR::UIScriptController::textContentType const):
        * TestRunnerShared/UIScriptContext/Bindings/UIScriptController.idl:
        * TestRunnerShared/UIScriptContext/UIScriptController.cpp:
        (WTR::UIScriptController::textContentType const):
        * TestRunnerShared/UIScriptContext/UIScriptController.h:
        * WebKitTestRunner/ios/UIScriptControllerIOS.mm:
        (WTR::UIScriptController::textContentType const):

2018-06-19  Robin Morisset  <rmorisset@apple.com>

        [WSL] Improving the typing rules
        https://bugs.webkit.org/show_bug.cgi?id=186310

        Rubberstamped by Filip Pizlo.

        Several changes:
        - added a "well_formed" judgement, and defined it on function definitions (tying together with the typing rules)
        - cleaned up the desugaring relation (it now works on normal statements, and deals with for loops correctly)
        - added the null literal, the comma operator, the not operator, and parens
        - fixed a bunch of minor typographic issues

        * WebGPUShadingLanguageRI/SpecWork/WSL_type.ott:

2018-06-18  Robin Morisset  <rmorisset@apple.com>

        [WSL] Starting to write the spec
        https://bugs.webkit.org/show_bug.cgi?id=186310

        Rubberstamped by Filip Pizlo.

        This is a snapshot of my current work on the WSL spec (I will try to commit more regularly in the future).

        WSL.g4 is the grammar, in antlr4 format. I only made minor changes in it since last time.

        source/index.rst is the Sphinx document. 